Update Open Request and Swagger Specification
